Enable git deployments in Vercel config

--- a/vercel.json
+++ b/vercel.json
@@ -12,5 +12,10 @@
   "env": {
     "MONGODB_URI": "@mongodb_uri",
     "OPENAI_API_KEY": "@openai_api_key"
+  },
+  "git": {
+    "deploymentEnabled": {
+      "main": true
+    }
   }
 }
